# RustSynth

./: .gitignore  README.md
AI/: AGENT_INSTRUCTIONS.md  LEGACY_CODEBASE_OVERVIEW.md  MASTER_TODO.md  README.md  REWRITE_ROADMAP.md
AI/architecture_direction_gtk4_relm4/: CHANGES.md  NEXT.md  SUMMARY.md  WGPU_INTEGRATION_PLAN.md
AI/initial_rewrite_planning/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t01_bootstrap_workspace/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t02_feature_matrix/: CHANGES.md  FEATURE_MATRIX.md  NEXT.md  SUMMARY.md
AI/t03_golden_fixtures/: CHANGES.md  FIXTURE_MANIFEST.md  NEXT.md  SUMMARY.md
AI/t04_preprocessor_crate/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t05_lexer_tokenizer_crate/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t06_parser_ast_crate/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t07_semantics_crate/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t08_evaluator_builder/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t09_transforms_state/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t10_scene_representation/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t10a_renderer_boundary/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t11_template_exporter/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t12_obj_exporter/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t13_scripting_compat/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t14_gtk4_shell/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t17_wgpu_viewport/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t18_variable_editor/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t19_camera_settings/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t20_template_export/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t21_obj_export_ui/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t25_performance_optimization/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t28_syntax_highlighting/: CHANGES.md  NEXT.md  SUMMARY.md
AI/t29_simplify_architecture/: CHANGES.md  NEXT.md  SUMMARY.md
AI/tauri_migration/: CHANGES.md  NEXT.md  SUMMARY.md
RustSynth/: Cargo.toml
RustSynth/.cargo/: config.toml
RustSynth/crates/rustsynth_app_gtk/: Cargo.toml
RustSynth/crates/rustsynth_app_gtk/src/: app.rs  camera_io.rs  main.rs  pipeline.rs  settings_dialog.rs  viewport.rs
RustSynth/crates/rustsynth_app_tauri/: package-lock.json  package.json
RustSynth/crates/rustsynth_app_tauri/src/: App.tsx  backend-tauri.ts  backend-wasm.ts  backend.ts  types.ts
RustSynth/crates/rustsynth_app_tauri/src-tauri/: Cargo.toml  tauri.conf.json
RustSynth/crates/rustsynth_app_tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
RustSynth/crates/rustsynth_app_tauri/src/components/: VariablePanel.tsx  Viewport.tsx
RustSynth/crates/rustsynth_core/: Cargo.toml
RustSynth/crates/rustsynth_core/src/: id.rs  math.rs  rng.rs
RustSynth/crates/rustsynth_eisenscript/: Cargo.toml
RustSynth/crates/rustsynth_eisenscript/src/: ast.rs  diagnostics.rs  lexer.rs  lib.rs  parser.rs  preprocessor.rs
RustSynth/crates/rustsynth_eval/: Cargo.toml
RustSynth/crates/rustsynth_eval/src/: builder.rs  lib.rs  recursion.rs  state.rs  transform.rs
RustSynth/crates/rustsynth_export_obj/: Cargo.toml
RustSynth/crates/rustsynth_export_obj/src/: exporter.rs  lib.rs  tessellate.rs
RustSynth/crates/rustsynth_export_template/: Cargo.toml
RustSynth/crates/rustsynth_export_template/src/: exporter.rs  lib.rs  template.rs
RustSynth/crates/rustsynth_render_api/: Cargo.toml
RustSynth/crates/rustsynth_render_api/src/: adapter.rs  backend.rs  camera.rs  lib.rs
RustSynth/crates/rustsynth_scene/: Cargo.toml
RustSynth/crates/rustsynth_scene/src/: camera.rs  lib.rs  object.rs  primitive.rs  scene.rs
RustSynth/crates/rustsynth_semantics/: Cargo.toml
RustSynth/crates/rustsynth_semantics/src/: lib.rs  primitive.rs  resolution.rs  rule_graph.rs  validation.rs
RustSynth/crates/rustsynth_viewport_bevy/: Cargo.toml
RustSynth/crates/rustsynth_viewport_bevy/src/: backend.rs  lib.rs
RustSynth/crates/rustsynth_viewport_gl/: Cargo.toml
RustSynth/crates/rustsynth_viewport_gl/src/: backend.rs  lib.rs
RustSynth/crates/rustsynth_viewport_wgpu/: Cargo.toml
RustSynth/crates/rustsynth_viewport_wgpu/src/: backend.rs  geometry.rs  gpu_types.rs  lib.rs  pipeline.rs  shader.rs
RustSynth/crates/rustsynth_wasm/: Cargo.toml
RustSynth/tests/: README.md
RustSynth/tests/fixtures/golden/: README.md
docs/: docs.md
src/: Cargo.toml  Clippy.toml
src/crates/rustsynth_app_tauri/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.web.ts
src/crates/rustsynth_app_tauri/dist-web/: index.html
src/crates/rustsynth_app_tauri/dist-web/assets/: backend-tauri-D-Qp264s.js  backend-wasm-BNBcrCTx.js  backend-wasm-BTgxeW3l.js  index-CYCbRn9d.css  index-D0cE6HKV.js  index-DBVdwaIW.js  index-DO4wKYfF.css  rustsynth_wasm-BPFR2n4H.js  rustsynth_wasm-DsBFlN7_.js  rustsynth_wasm_bg-B32cTuMF.wasm  rustsynth_wasm_bg-B_zBsHSM.wasm
src/crates/rustsynth_app_tauri/src/: App.tsx  main.tsx  onboarding.ts  styles.css
src/crates/rustsynth_app_tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/crates/rustsynth_app_tauri/src-tauri/capabilities/: default.json
src/crates/rustsynth_app_tauri/src-tauri/src/: pipeline.rs
src/crates/rustsynth_app_tauri/src/components/: Editor.tsx  InfoBar.tsx  MenuBar.tsx  StatusBar.tsx  VariablePanel.tsx  Viewport.tsx
src/crates/rustsynth_app_tauri/src/examples/: Arc Sphere.es  BinaryKite.es  CelestialEngine.es  Nabla.es  RoundTree.es
src/crates/rustsynth_cli/: Cargo.toml
src/crates/rustsynth_cli/src/: main.rs
src/crates/rustsynth_core/src/: color.rs  error.rs  lib.rs
src/crates/rustsynth_eisenscript/: Cargo.toml
src/crates/rustsynth_eisenscript/src/: lexer.rs  parser.rs
src/crates/rustsynth_eval/src/: lib.rs  recursion.rs  transform.rs
src/crates/rustsynth_export_obj/: Cargo.toml
src/crates/rustsynth_export_obj/src/: exporter.rs  tessellate.rs
src/crates/rustsynth_export_template/src/: exporter.rs
src/crates/rustsynth_scene/src/: adapter.rs  camera.rs  lib.rs  object.rs  primitive.rs
src/crates/rustsynth_wasm/src/: lib.rs
src/tests/fixtures/: README.md
src/ui/: index.html  package.json  tailwind.config.js
src/ui/src/: input.css
