[workspace]
resolver = "2"
members = [
    "crates/rustsynth_core",
    "crates/rustsynth_eisenscript",
    "crates/rustsynth_semantics",
    "crates/rustsynth_eval",
    "crates/rustsynth_scene",
    "crates/rustsynth_render_api",
    "crates/rustsynth_export_template",
    "crates/rustsynth_export_obj",
    "crates/rustsynth_app_gtk",
    "crates/rustsynth_app_tauri/src-tauri",
    "crates/rustsynth_viewport_bevy",
    "crates/rustsynth_viewport_gl",
    "crates/rustsynth_viewport_wgpu",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustSynth contributors"]
license = "GPL-3.0"
repository = ""

# Shared dependency versions pinned here; crates reference them with `workspace = true`
[workspace.dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Math
glam = { version = "0.29", features = ["serde"] }

# GUI
gtk4 = { version = "0.10", features = ["v4_10"] }
relm4 = "0.10"

# Text processing
regex = "1"

# Testing utilities
pretty_assertions = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
