[package]
name = "rustsynth_export_template"
version.workspace = true
edition.workspace = true
description = "Template-based exporter for external renderers (Sunflow, POV-Ray, etc.)"

[dependencies]
rustsynth_core = { path = "../rustsynth_core" }
rustsynth_scene = { path = "../rustsynth_scene" }
rustsynth_render_api = { path = "../rustsynth_render_api" }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
