[package]
name = "rustsynth_viewport_bevy"
version.workspace = true
edition.workspace = true
description = "Optional Bevy viewport backend (prototype, not yet wired)"

[dependencies]
rustsynth_core = { path = "../rustsynth_core" }
rustsynth_scene = { path = "../rustsynth_scene" }
rustsynth_render_api = { path = "../rustsynth_render_api" }
anyhow = { workspace = true }
log = { workspace = true }

# Bevy will be added here once T15 begins
# bevy = { version = "0.15", default-features = false }

[dev-dependencies]
pretty_assertions = { workspace = true }
