[package]
name = "rustsynth_viewport_wgpu"
version.workspace = true
edition.workspace = true
description = "wgpu viewport backend — renders canonical scenes via wgpu, targeting GtkGLArea EGL surface"

[dependencies]
rustsynth_core = { path = "../rustsynth_core" }
rustsynth_scene = { path = "../rustsynth_scene" }
rustsynth_render_api = { path = "../rustsynth_render_api" }
anyhow = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

[dev-dependencies]
pretty_assertions = { workspace = true }
