[package]
name = "rustsynth_app_tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 desktop application shell for RustSynth"

[lib]
name = "rustsynth_app_tauri_lib"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "rustsynth"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rustsynth_core = { path = "../../rustsynth_core" }
rustsynth_eisenscript = { path = "../../rustsynth_eisenscript" }
rustsynth_semantics = { path = "../../rustsynth_semantics" }
rustsynth_eval = { path = "../../rustsynth_eval" }
rustsynth_scene = { path = "../../rustsynth_scene" }
rustsynth_export_template = { path = "../../rustsynth_export_template" }
rustsynth_export_obj = { path = "../../rustsynth_export_obj" }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
